<resources>
    <string name="app_name">Registration template</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="slogan">Это тестовое приложение. Оно не для релиза.</string>
    <string name="login_offer">Продолжить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="back">Назад</string>
    <string name="log_in_to_account">Вход в аккаунт</string>
    <string name="enter_e_mail">Введите ваш e-mail</string>
    <string name="forget_password">Забыли пароль? </string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя Фамилия</string>
    <string name="name_example">Антон Антонов</string>
    <string name="login">e-mail</string>
    <string name="password">Пароль</string>
    <string name="you_are_agree">Зарегистрировавшись вы соглашаетесь с <a href="http://www.google.com">Условиями обслуживания</a> и <a href="https://yandex.ru">Политикой конфиденциальности</a>.</string>
    <string name="log_in">Войти</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="already_created">Уже есть аккаунт?</string>
    <string name="send_code_head">Введите пятизначный код</string>
    <string name="send_coded">Код подтверждения отправлен на почту</string>
    <string name="code_not_sent">Код не пришёл?</string>
    <string name="send_again">Отправить заново</string>
    <string name="confirm">Подтвердить</string>
    <string name="set_password_head">Установите пароль</string>
    <string name="set_new_password_head">Установите новый пароль</string>
    <string name="password_must">Пароль должен содержать не менее 8 знаков</string>
    <string name="enter_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="second_password">Повторный пароль</string>
    <string name="password_restoration">Восстановление пароля</string>
    <string name="send_code">Отправить код</string>
    <string name="refuse">Назад</string>
    <string name="done">Готово</string>
    <string name="log_out">Выйти</string>
    <string name="name_not_found">Имя не найдено</string>
    <string name="invent_password">Придумайте ваш пароль</string>
    <string name="server_error">Ошибка подключения</string>
    <string name="passwords_not_equal">Пароли не совпадают!</string>
    <string name="empty_field_er">Заполните это поле!</string>
    <string name="no_code_er">Введите код полностью!</string>
    <string name="unsupported_er">Техническая ошибка...</string>
    <string name="no_field">Поле не задано!</string>
    <string name="exist_account">Аккаунт с этой почтой уже существует!</string>
    <string name="email_not_found">Почта не найдена!</string>
    <string name="incorrect_code">Неверный код подтверждения!</string>
    <string name="not_exist_account">Aккаунта с этой почтой не существует!</string>
    <string name="incorrect_password">Неверный пароль!</string>
    <string name="try_again">Попробуйте снова</string>
    <string name="not_valid_email">Введите корректную почту!</string>
    <string name="not_active_code">Код верификации не активен!</string>
    <string name="password_too_short">Пароль слишком короткий!</string>
</resources>