<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/reg_back_but"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/angle_left"
            android:paddingEnd="370dp"
            android:text="@string/back"
            android:textAppearance="@style/CustomTextButtonBack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/CustomTextButtonBack"
            android:paddingTop="12dp"
            android:paddingStart="35dp"
            />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextHeader"
        android:text="@string/registration"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_marginStart="40dp"
        />
    <EditText
        android:id="@+id/name_view_r"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name_example"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:paddingStart="8dp"
        android:background="@drawable/custom_edit_gray"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/enter_e_mail"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_marginStart="40dp"
        />
    <EditText
        android:id="@+id/login_view_r"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:paddingStart="8dp"
        android:background="@drawable/custom_edit_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        >
        <CheckBox
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/custom_checkbox_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_agree"
            style="@style/CustomTextSmallGrey"
            android:textColorLink="@color/blue_primary"
            android:layout_marginLeft="15dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/reg_but_r"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_but_blue"
        android:textAppearance="@style/CustomTextButtonWhite"
        android:text="@string/create_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"
        />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/CustomTextNormalGray"
            android:text="@string/already_created"
            />
        <TextView
            android:id="@+id/reg_to_log_but"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            style="@style/CustomTextNormalGray"
            android:text="@string/log_in"
            android:textColor="@color/blue_primary"
            />
    </LinearLayout>
</LinearLayout>