<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/back_component_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/login_back_but"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/angle_left"
            android:paddingEnd="370dp"
            android:text="@string/back"
            android:textAppearance="@style/CustomTextButtonBack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/CustomTextButtonBack"
            android:paddingTop="12dp"
            android:paddingStart="35dp"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/log_in_text_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextHeader"
        android:text="@string/log_in_to_account"
        android:textAlignment="center"
        android:layout_below="@id/back_component_l"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/e_mail_text_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/enter_e_mail"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_alignStart="@id/login_view_l"
        android:layout_below="@id/log_in_text_l"
        />
    <EditText
        android:id="@+id/login_view_l"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/login"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:paddingStart="8dp"
        android:background="@drawable/custom_edit_gray"
        android:layout_below="@id/e_mail_text_l"
        />
    <TextView
        android:id="@+id/error_email_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_view_l"
        android:layout_alignStart="@id/login_view_l"
        style="@style/CustomTextNormalRed"
        android:text=""
        />
    <TextView
        android:id="@+id/password_text_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/enter_password"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/login_view_l"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_view_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_text_l"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_view_l"
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/custom_edit_gray"
            android:paddingStart="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/error_pass_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_but"
        android:layout_alignStart="@id/password_view_component"
        style="@style/CustomTextNormalRed"
        android:text=""
        />

    <TextView
        android:id="@+id/forget_password_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        style="@style/CustomTextNormalGray"
        android:text="@string/forget_password"
        android:layout_below="@id/password_view_component"
        />

    <Button
        android:id="@+id/login_but_l"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_but_blue"
        android:textAppearance="@style/CustomTextButtonWhite"
        android:text="@string/log_in"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/log_to_reg_component"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:id="@+id/log_to_reg_component"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomTextNormalGray"
            android:text="@string/no_account"
            />
        <TextView
            android:id="@+id/log_to_reg_but"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/CustomTextNormalGray"
            android:text="@string/registration"
            android:textColor="@color/blue_primary"
            />
    </LinearLayout>
</RelativeLayout>