<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">
    <Button
        android:id="@+id/code_back_but"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="300dp"
        android:text="@string/back"
        android:textAppearance="@style/CustomTextButtonBack"
        android:drawableStart="@drawable/angle_left"
        android:paddingStart="30dp"
        />
    <TextView
        android:id="@+id/code_title_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextHeader"
        android:text="@string/send_code_head"
        android:textAlignment="center"
        android:layout_below="@id/code_back_but"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/code_sended_c"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/code_title_c"
        android:layout_centerHorizontal="true"
        android:text="@string/send_coded"
        style="@style/CustomTextBigGray"
        android:textAlignment="center"
        />

    <com.example.registrationtemplate.regPart.CodeInputView
        android:id="@+id/code_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:layout_below="@id/code_sended_c"
        />

    <TextView
        android:id="@+id/error_code_c"
        android:layout_alignStart="@id/code_c"
        android:layout_below="@id/code_c"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CustomTextNormalRed"
        android:text=""
        />

    <LinearLayout
        android:id="@+id/reg_to_log_component"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_code_c"
        android:layout_centerHorizontal="true">
    <TextView
        android:id="@+id/code_not_sended_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_not_sent"
        style="@style/CustomTextNormalGray"
        android:textAlignment="center"
        />
        <TextView
            android:id="@+id/send_again_c"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_again"
            style="@style/CustomTextNormalGray"
            android:textColor="@color/blue_primary"

            android:textAlignment="center"
            />
    </LinearLayout>
    <Button
        android:id="@+id/confirm_but_c"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_but_blue"
        android:textAppearance="@style/CustomTextButtonWhite"
        android:text="@string/confirm"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>