<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/back_component_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/newp_back_but"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/angle_left"
            android:paddingEnd="370dp"
            android:text="@string/back"
            android:textAppearance="@style/CustomTextButtonBack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/CustomTextButtonBack"
            android:paddingTop="12dp"
            android:paddingStart="35dp"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/new_p_head_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextHeader"
        android:text="@string/password_restoration"
        android:textAlignment="center"
        android:layout_below="@id/back_component_n"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/e_mail_text_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/enter_e_mail"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_alignStart="@id/email_view_n"
        android:layout_below="@id/new_p_head_n"
        />
    <EditText
        android:id="@+id/email_view_n"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/login"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:paddingStart="8dp"
        android:background="@drawable/custom_edit_gray"
        android:layout_below="@id/e_mail_text_n"
        />

    <Button
        android:id="@+id/send_but_n"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_but_blue"
        android:textAppearance="@style/CustomTextButtonWhite"
        android:text="@string/send_code"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>