<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/back_component_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/password_back_but"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:src="@drawable/angle_left"
            android:paddingEnd="370dp"
            android:text="@string/back"
            android:textAppearance="@style/CustomTextButtonBack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/CustomTextButtonBack"
            android:paddingTop="12dp"
            android:paddingStart="35dp"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/password_title_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextHeader"
        android:text="@string/set_password_head"
        android:textAlignment="center"
        android:layout_below="@id/back_component_p"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:id="@+id/password_must_p"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_title_p"
        android:layout_centerHorizontal="true"
        android:text="@string/password_must"
        style="@style/CustomTextBigGray"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/password_enter_text_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/enter_password"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/password_must_p"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_view_component_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_enter_text_p"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_enter_p"
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/custom_edit_gray"
            android:paddingStart="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/password_first_error_p"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignStart="@id/password_view_component_p"
        android:layout_below="@id/password_view_component_p"
        style="@style/CustomTextNormalRed"
        android:text=""
        />
    <TextView
        android:id="@+id/password_confirm_text_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomTextNormalBlack"
        android:text="@string/enter_password"
        android:textAlignment="textStart"
        android:layout_marginTop="22dp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/password_view_component_p"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_component_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_confirm_text_p"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm_p"
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:hint="@string/second_password"
            android:inputType="textPassword"
            android:background="@drawable/custom_edit_gray"
            android:paddingStart="8dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/password_second_error_p"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignStart="@id/password_confirm_component_p"
        android:layout_below="@id/password_confirm_component_p"
        style="@style/CustomTextNormalRed"
        android:text=""
        />

    <Button
        android:id="@+id/done_but_p"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_but_blue"
        android:textAppearance="@style/CustomTextButtonWhite"
        android:text="@string/done"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>